--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.6", features = ["http2"] }
+bytes = { version = "1.7.2", features = ["serde"] }
 serde = { version = "1.0.210", features = ["derive"] }
 time = { version = "0.3.36", features = ["formatting", "local-offset", "serde", "serde-human-readable", "serde-well-known"] }
 tokio = { version = "1.40.0", features = ["full"] }
