--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ tokio = { version = "1.40.0", features = ["full", "test-util", "tracing"] }
 tower_governor = { version = "0.4.2", features = ["tracing", "axum"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+
+[dev-dependencies]
+serde_json = "1.0.128"
+tower = { version = "0.5.1", features = ["util"] }
