--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,12 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.6", features = ["http2"] }
+axum-extra = { version = "0.9.4", features = ["query"] }
 bytes = { version = "1.7.2", features = ["serde"] }
 serde = { version = "1.0.210", features = ["derive"] }
 time = { version = "0.3.36", features = ["formatting", "local-offset", "serde", "serde-human-readable", "serde-well-known"] }
 tokio = { version = "1.40.0", features = ["full", "test-util", "tracing"] }
+tokio-stream = { version = "0.1.16", features = ["sync"] }
 tower_governor = { version = "0.4.2", features = ["tracing", "axum"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
