--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1.0", features = ["derive"] }
 time = { version = "0.3", features = ["formatting", "local-offset", "serde", "serde-human-readable", "serde-well-known"] }
 tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "test-util", "tracing"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
+tokio-util = { version = "0.7.12", features = ["tracing"] }
 tower-http = { version = "0.6", features = ["metrics"] }
 tower_governor = { version = "0.4", features = ["tracing", "axum"] }
 tracing = "0.1"
